Fix issue with overlapping datepickers

--- a/src/components/InputDatePicker/InputDatePicker.module.scss
+++ b/src/components/InputDatePicker/InputDatePicker.module.scss
@@ -7,4 +7,5 @@
 .modal {
   background-color: $white;
   border: 4px solid $gray;
+  z-index: 9999;
 }
